force-app/main/default/objects/Sales_Engineering_Log__c/Sales_Engineering_Log__c.object-meta.xml
<CustomObject>
    <label>Sales Engineering Log</label>
    <nameField>
        <displayFormat>SE-{0000}</displayFormat>
        <label>SE Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Engineering Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>