force-app/main/default/objects/Sales_Engineering_Log__c/fields/ACV_Bookings__c.field-meta.xml
<CustomField>
    <fullName>ACV_Bookings__c</fullName>
    <formula>Opportunity__r.ACV_Bookings_SOT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACV Bookings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>