force-app/main/default/objects/Sales_Engineering_Log__c/fields/AE_Notes__c.field-meta.xml
<CustomField>
    <fullName>AE_Notes__c</fullName>
    <label>AE Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>