force-app/main/default/objects/Sales_Engineering_Log__c/fields/Connected_Equipment_SE_Notes__c.field-meta.xml
<CustomField>
    <fullName>Connected_Equipment_SE_Notes__c</fullName>
    <label>Connected Equipment SE Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>