force-app/main/default/objects/Sales_Engineering_Log__c/fields/Connected_Sites_SE_Notes__c.field-meta.xml
<CustomField>
    <fullName>Connected_Sites_SE_Notes__c</fullName>
    <label>Connected Sites SE Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>