force-app/main/default/objects/Sales_Engineering_Log__c/fields/Current_Tech_Stage_Duration__c.field-meta.xml
<CustomField>
    <fullName>Current_Tech_Stage_Duration__c</fullName>
    <formula>IF(ISPICKVAL( Tech_Stage__c , &quot;Technical Discovery&quot;) ,  TODAY() -  Went_to_Technical_Discovery_Date__c ,
IF(ISPICKVAL( Tech_Stage__c , &quot;Trial Management&quot;) ,  TODAY() -   Went_to_Trial_Management_Date__c  ,
IF(ISPICKVAL( Tech_Stage__c , &quot;Technical Proposal&quot;) ,  TODAY() -   Went_to_Technical_Proposal_Date__c  ,
IF(ISPICKVAL( Tech_Stage__c , &quot;New Key Account Identified&quot;) ,  TODAY() -   Went_to_New_Key_Account_Identified_Date__c  ,NULL
))))</formula>
    <label>Current Tech Stage Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>