force-app/main/default/objects/Sales_Engineering_Log__c/fields/CurrentCS_Tech_Stage_Duration__c.field-meta.xml
<CustomField>
    <fullName>CurrentCS_Tech_Stage_Duration__c</fullName>
    <formula>IF(ISPICKVAL( CS_Tech_Sale_Stage__c , &quot;Pre-trial phase&quot;) , TODAY() - Went_to_CS_Pre_trial_Phase_Date__c ,
IF(ISPICKVAL( CS_Tech_Sale_Stage__c , &quot;Tech discovery&quot;) , TODAY() - Went_to_CS_Technical_Discovery_Date__c ,
IF(ISPICKVAL( CS_Tech_Sale_Stage__c , &quot;Trial management&quot;) , TODAY() - Went_to_CS_Trial_Management_Date__c ,
IF(ISPICKVAL( CS_Tech_Sale_Stage__c , &quot;Tech proposal&quot;) , TODAY() - Went_to_CS_Technical_Proposal_Date__c ,
IF(ISPICKVAL( CS_Tech_Sale_Stage__c , &quot;New key account identified&quot;) , TODAY() - Went_to_CS_New_Key_Account_Identified_Da__c ,NULL
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current CS Tech Stage Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>