force-app/main/default/objects/Sales_Engineering_Log__c/fields/Industrial_SE_Key_Account__c.field-meta.xml
<CustomField>
    <fullName>Industrial_SE_Key_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Industrial SE Key Account</label>
    <type>Checkbox</type>
</CustomField>