force-app/main/default/objects/Sales_Engineering_Log__c/fields/Industrial_SE_Status__c.field-meta.xml
<CustomField>
    <fullName>Industrial_SE_Status__c</fullName>
    <description>SE status of Industrial opportunities</description>
    <label>Industrial SE Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting on AE</fullName>
            </value>
            <value>
                <fullName>Waiting on Customer</fullName>
            </value>
            <value>
                <fullName>Waiting on SE</fullName>
            </value>
            <value>
                <fullName>Waiting on Channel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>