force-app/main/default/objects/Sales_Engineering_Log__c/fields/Key_Account__c.field-meta.xml
<CustomField>
    <fullName>Key_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key Account</label>
    <type>Checkbox</type>
</CustomField>