force-app/main/default/objects/Sales_Engineering_Log__c/fields/Number_of_powered_assets__c.field-meta.xml
<CustomField>
    <fullName>Number_of_powered_assets__c</fullName>
    <formula>Opportunity__r.Account.Number_of_Powered_Assets__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Powered Assets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>