force-app/main/default/objects/Sales_Engineering_Log__c/fields/On_Hold_Date__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Date__c</fullName>
    <label>On Hold Date</label>
    <type>Date</type>
</CustomField>