force-app/main/default/objects/Sales_Engineering_Log__c/fields/Primary_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Competitor__c</fullName>
    <inlineHelpText>To list the top competitors involved in the deal</inlineHelpText>
    <label>Primary Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AddSecure</fullName>
            </value>
            <value>
                <fullName>Axscend</fullName>
            </value>
            <value>
                <fullName>Azuga</fullName>
            </value>
            <value>
                <fullName>BigChange</fullName>
            </value>
            <value>
                <fullName>CameraMatics</fullName>
            </value>
            <value>
                <fullName>Fleetboard</fullName>
            </value>
            <value>
                <fullName>Geotab</fullName>
            </value>
            <value>
                <fullName>GPS Buddy</fullName>
            </value>
            <value>
                <fullName>GPS Insight</fullName>
            </value>
            <value>
                <fullName>Inseego</fullName>
                <label>Inseego (C-Track)</label>
            </value>
            <value>
                <fullName>Issac Instruments</fullName>
            </value>
            <value>
                <fullName>Lightfoot</fullName>
            </value>
            <value>
                <fullName>Lytx</fullName>
            </value>
            <value>
                <fullName>Mandata</fullName>
            </value>
            <value>
                <fullName>Michelin Connect</fullName>
                <label>Michelin Connect (Masternaut)</label>
            </value>
            <value>
                <fullName>Microlise</fullName>
            </value>
            <value>
                <fullName>Motive</fullName>
            </value>
            <value>
                <fullName>Navman</fullName>
            </value>
            <value>
                <fullName>Netradyne</fullName>
            </value>
            <value>
                <fullName>No Competitor</fullName>
            </value>
            <value>
                <fullName>Omnitracs</fullName>
            </value>
            <value>
                <fullName>Orbcomm</fullName>
                <label>Orbcomm (Bluetree)</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Peoplenet / Trimble</fullName>
            </value>
            <value>
                <fullName>Quartix</fullName>
            </value>
            <value>
                <fullName>Radius</fullName>
            </value>
            <value>
                <fullName>Spedion</fullName>
            </value>
            <value>
                <fullName>TomTom Webfleet</fullName>
            </value>
            <value>
                <fullName>TrackM8</fullName>
            </value>
            <value>
                <fullName>Transics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>