force-app/main/default/objects/Sales_Engineering_Log__c/fields/Primary_Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Equipment_Type__c</fullName>
    <inlineHelpText>Customer equipment that Samsara will monitor</inlineHelpText>
    <label>Primary Equipment Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Generators</fullName>
            </value>
            <value>
                <fullName>Boilers</fullName>
            </value>
            <value>
                <fullName>Chillers</fullName>
            </value>
            <value>
                <fullName>Compressors</fullName>
            </value>
            <value>
                <fullName>Construction Equipment</fullName>
            </value>
            <value>
                <fullName>Oil and Gas Equipment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>