force-app/main/default/objects/Sales_Engineering_Log__c/fields/SE_Assignment__c.field-meta.xml
<CustomField>
    <fullName>SE_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Renamed the field Label for GTMS-19974.</description>
    <label>Assigned SE</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>SE</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Engineering_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>