force-app/main/default/objects/Sales_Engineering_Log__c/fields/SE_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>SE_Follow_Up_Date__c</fullName>
    <label>SE Follow Up Date</label>
    <type>Date</type>
</CustomField>