force-app/main/default/objects/Sales_Engineering_Log__c/fields/Tech_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Tech_Close_Date__c</fullName>
    <label>SE Close Date</label>
    <type>Date</type>
</CustomField>