force-app/main/default/objects/Sales_Engineering_Log__c/fields/Tech_Discovery__c.field-meta.xml
<CustomField>
    <fullName>Tech_Discovery__c</fullName>
    <label>Tech Discovery</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>