force-app/main/default/objects/Sales_Engineering_Log__c/fields/Tech_Stage__c.field-meta.xml
<CustomField>
    <fullName>Tech_Stage__c</fullName>
    <label>Tech Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Key Account Identified</fullName>
            </value>
            <value>
                <fullName>Technical Discovery</fullName>
            </value>
            <value>
                <fullName>Trial Management</fullName>
            </value>
            <value>
                <fullName>Technical Proposal</fullName>
            </value>
            <value>
                <fullName>Tech Win</fullName>
            </value>
            <value>
                <fullName>Tech Loss</fullName>
            </value>
            <value>
                <fullName>Solution Design</fullName>
                <isActive>false</isActive>
                <label>Solution Design</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>