force-app/main/default/objects/Sales_Engineering_Log__c/fields/Trial_gear_ship_date__c.field-meta.xml
<CustomField>
    <fullName>Trial_gear_ship_date__c</fullName>
    <label>Trial gear ship date</label>
    <type>Date</type>
</CustomField>