force-app/main/default/objects/Sales_Engineering_Log__c/fields/Trial_Hardware_Install_date__c.field-meta.xml
<CustomField>
    <fullName>Trial_Hardware_Install_date__c</fullName>
    <label>Trial Start Date</label>
    <type>Date</type>
</CustomField>