force-app/main/default/objects/Sales_Engineering_Log__c/fields/Went_to_CE_Technical_Proposal_Date__c.field-meta.xml
<CustomField>
    <fullName>Went_to_CE_Technical_Proposal_Date__c</fullName>
    <label>Went to CE Technical Proposal Date</label>
    <type>Date</type>
</CustomField>