force-app/main/default/objects/Sales_Engineering_Log__c/fields/Went_to_CS_Pre_trial_Phase_Date__c.field-meta.xml
<CustomField>
    <fullName>Went_to_CS_Pre_trial_Phase_Date__c</fullName>
    <label>Went to CS Pre-trial Phase Date</label>
    <type>Date</type>
</CustomField>