force-app/main/default/objects/Sales_Engineering_Log__c/fields/Went_to_CS_Tech_Win_Date__c.field-meta.xml
<CustomField>
    <fullName>Went_to_CS_Tech_Win_Date__c</fullName>
    <label>Went to CS Tech Win Date</label>
    <type>Date</type>
</CustomField>