force-app/main/default/objects/Sales_Engineering_Log__c/fields/Went_to_New_Key_Account_Identified_Date__c.field-meta.xml
<CustomField>
    <fullName>Went_to_New_Key_Account_Identified_Date__c</fullName>
    <label>Went to New Key Account Identified Date</label>
    <type>Date</type>
</CustomField>