force-app/main/default/objects/Sales_Engineering_Log__c/fields/Went_to_Technical_Discovery_Date__c.field-meta.xml
<CustomField>
    <fullName>Went_to_Technical_Discovery_Date__c</fullName>
    <label>Went to Technical Discovery Date</label>
    <type>Date</type>
</CustomField>