force-app/main/default/objects/Sales_Engineering_Log__c/recordTypes/EMEA_SE_Log.recordType-meta.xml
<RecordType>
    <fullName>EMEA_SE_Log</fullName>
    <active>true</active>
    <description>EMEA SE Log Record Type with country-specific customizations and related automations so that the EMEA Sales Engineering (SE) team can maintain accurate, region-specific data quality and ensure timely updates to their activities.</description>
    <label>EMEA SE Log</label>
</RecordType>