force-app/main/default/objects/Sales_Engineering_Log__c/recordTypes/Industrial.recordType-meta.xml
<RecordType>
    <fullName>Industrial</fullName>
    <active>true</active>
    <label>Industrial</label>
</RecordType>