force-app/main/default/objects/Sales_Engineering_Log__c/validationRules/Prevent_New_SE_Log_If_Opportunity_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_New_SE_Log_If_Opportunity_Closed</fullName>
    <active>true</active>
    <description>User cannot create a New SE Log if the Opportunity is Closed.</description>
    <errorConditionFormula>AND(NOT($Permission.Validation_Rule_Exemption), ISNEW() , Opportunity__r.IsClosed  = true)</errorConditionFormula>
    <errorMessage>You cannot create an SE Log when the Opportunity is Closed.</errorMessage>
</ValidationRule>