force-app/main/default/objects/Sales_Engineering_Log__c/validationRules/Primary_Competitor_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Competitor_Mandatory</fullName>
    <active>true</active>
    <description>Primary competitor is mandatory whenever Tech win set to Tech win or Tech loss.</description>
    <errorConditionFormula>AND(NOT($Permission.Validation_Rule_Exemption),
RecordType.DeveloperName  = &quot;EMEA_SE_Log&quot;,
 OR(ISPICKVAL(Tech_Win__c, &quot;Tech Win&quot;),
ISPICKVAL(Tech_Win__c, &quot;Tech Loss&quot;)),
 ISBLANK(TEXT(Primary_Competitor__c))
)</errorConditionFormula>
    <errorDisplayField>Primary_Competitor__c</errorDisplayField>
    <errorMessage>Please select the Primary competitor.</errorMessage>
</ValidationRule>