force-app/main/default/objects/Sales_Engineering_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Opportunity__c</columns>
    <columns>Account_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SE_Assignment__c</field>
        <operation>contains</operation>
        <value>Yeh</value>
    </filters>
    <filters>
        <field>Opportunity_Stage__c</field>
        <operation>notContain</operation>
        <value>closed</value>
    </filters>
    <label>All</label>
</ListView>